--- a/custom_components/elehantmi/translations/en.json
+++ b/custom_components/elehantmi/translations/en.json
@@ -23,15 +23,25 @@
       },
       "auto_discover": {
         "title": "Discover Elehant Meters",
-        "description": "Scanning for Elehant meters... Select devices to add",
+        "description": "Scanning for Elehant meters...",
         "data": {
-          "devices": "Discovered Devices",
           "selected_bt_adapter": "Bluetooth Adapter"
+        }
+      },
+      "auto_discover_progress": {
+        "title": "Discovering Elehant Meters",
+        "description": "Scanning for devices. This will take up to 60 seconds..."
+      },
+      "select_devices": {
+        "title": "Select Elehant Meters",
+        "description": "Choose which discovered meters to add",
+        "data": {
+          "devices": "Discovered Devices"
         }
       },
       "configure_devices": {
         "title": "Configure Discovered Meters",
-        "description": "Configure the settings for each discovered meter",
+        "description": "Configure the settings for each selected meter",
         "data": {
           "name_{serial}": "Device Name",
           "location_{serial}": "Location",
@@ -56,7 +66,8 @@
       "all_devices_configured": "All selected devices are already configured"
     },
     "abort": {
-      "already_configured": "Device is already configured"
+      "already_configured": "Device is already configured",
+      "no_devices_found": "No new Elehant devices found in the last 24 hours. Make sure your meters are transmitting and try again."
     }
   },
   "entity": {
