--- a/custom_components/elehantmi/translations/ru.json
+++ b/custom_components/elehantmi/translations/ru.json
@@ -23,15 +23,25 @@
       },
       "auto_discover": {
         "title": "Поиск счетчиков Элехант",
-        "description": "Поиск устройств... Выберите устройства для добавления",
+        "description": "Сканирование устройств Элехант...",
         "data": {
-          "devices": "Найденные устройства",
           "selected_bt_adapter": "Bluetooth адаптер"
+        }
+      },
+      "auto_discover_progress": {
+        "title": "Поиск счетчиков Элехант",
+        "description": "Сканирование устройств. Это займет до 60 секунд..."
+      },
+      "select_devices": {
+        "title": "Выберите счетчики Элехант",
+        "description": "Выберите обнаруженные счетчики для добавления",
+        "data": {
+          "devices": "Обнаруженные устройства"
         }
       },
       "configure_devices": {
         "title": "Настройка найденных счетчиков",
-        "description": "Настройте параметры для каждого найденного счетчика",
+        "description": "Настройте параметры для каждого выбранного счетчика",
         "data": {
           "name_{serial}": "Название устройства",
           "location_{serial}": "Местоположение",
@@ -56,7 +66,8 @@
       "all_devices_configured": "Все выбранные устройства уже настроены"
     },
     "abort": {
-      "already_configured": "Устройство уже настроено"
+      "already_configured": "Устройство уже настроено",
+      "no_devices_found": "Не найдено новых устройств Элехант за последние 24 часа. Убедитесь, что счетчики передают данные, и попробуйте снова."
     }
   },
   "entity": {
