--- a/custom_components/elehantmi/translations/ru.json
+++ b/custom_components/elehantmi/translations/ru.json
@@ -30,7 +30,7 @@
       },
       "auto_discover_progress": {
         "title": "Поиск счетчиков Элехант",
-        "description": "Сканирование устройств. Это займет до 60 секунд..."
+        "description": "⏱️ **Время сканирования:** {time}\n\n📊 **Найдено устройств:** {count}\n\n📋 **Последние события:**\n```\n{logs}\n```"
       },
       "select_devices": {
         "title": "Выберите счетчики Элехант",
@@ -67,7 +67,9 @@
     },
     "abort": {
       "already_configured": "Устройство уже настроено",
-      "no_devices_found": "Не найдено новых устройств Элехант за последние 24 часа. Убедитесь, что счетчики передают данные, и попробуйте снова."
+      "no_devices_found": "Не найдено новых устройств Элехант за последние 24 часа. Убедитесь, что счетчики передают данные, и попробуйте снова.",
+      "scan_cancelled": "Сканирование отменено пользователем",
+      "scan_failed": "Ошибка сканирования. Проверьте логи."
     }
   },
   "entity": {
