--- a/custom_components/elehantmi/translations/ru.json
+++ b/custom_components/elehantmi/translations/ru.json
@@ -65,11 +65,10 @@
       "no_devices_selected": "Выберите хотя бы одно устройство",
       "all_devices_configured": "Все выбранные устройства уже настроены"
     },
-    "abort": {
+     "abort": {
       "already_configured": "Устройство уже настроено",
       "no_devices_found": "Не найдено новых устройств Элехант за последние 24 часа. Убедитесь, что счетчики передают данные, и попробуйте снова.",
-      "scan_cancelled": "Сканирование отменено пользователем",
-      "scan_failed": "Ошибка сканирования. Проверьте логи."
+      "no_scanner": "Bluetooth сканер не инициализирован. Сначала добавьте хотя бы один счетчик вручную для запуска фонового сканирования."
     }
   },
   "entity": {
